# mage

./: .gitignore  demo.py  engine_pretrain.py  gen_img_uncond.py  main_finetune.py  main_pretrain.py  models_mage.py  models_vit_mage.py  pyproject.toml
.github/: copilot-instructions.md
docs/: 260130.md  MAGE_Generation_Execution_Plan.md  TODO.md
docs/ref/: 251031-01.json  251031-02.json  251107-01.json  251107-02.json  251114-01.json  251114-02.json
output_dir/demo/: err.txt  out.txt
output_dir/train/one/: events.out.tfevents.1769143105.gpu10.29548.0  events.out.tfevents.1769416469.gpu09.15628.0  log.txt  out.txt
output_dir/train/small/: err.txt  events.out.tfevents.1769063311.gpu10.13024.0  log.txt  out.txt
output_dir/train/tiny/: events.out.tfevents.1769094489.gpu02.14633.0  log.txt  out.txt
output_dir/train/two/: err.txt  events.out.tfevents.1769073306.gpu09.32368.0  events.out.tfevents.1769073578.gpu09.32556.0  out.txt
output_dir/uncond_gen/: err.txt  out.txt
scripts/: demo.sh  gen.sh  run.py  sync.sh  t_gen.sh  t_train.sh  tb.sh  train.sh  uncond_gen.sh
