[project]
name = "mage"
version = "0.1.0"
description = "MAGE: Masked Generative Encoder"
requires-python = ">=3.8,<3.9"
dependencies = [
    "torch==1.7.1",
    "torchvision==0.8.2",
    "numpy==1.19.2",
    "albumentations==0.4.3",
    "opencv-python==4.1.2.30",
    "pudb==2019.2",
    "imageio==2.9.0",
    "imageio-ffmpeg==0.4.2",
    "pytorch-lightning==1.0.8",
    "omegaconf==2.0.0",
    "test-tube>=0.7.5",
    "streamlit>=0.73.1",
    "einops==0.3.0",
    "more-itertools>=8.0.0",
    "transformers==4.3.1",
    "timm==0.3.2",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu102"
explicit = true
